# solarti-program-library

./: .gitignore  .mergify.yml  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  cbindgen.sh  patch.crates-io.sh  tea.yaml  update-miraland-dependencies.sh
associated-token-account/program/: Cargo.toml  program-id.md  run-tests.sh
associated-token-account/program-test/: Cargo.toml
associated-token-account/program-test/tests/: create_idempotent.rs  extended_mint.rs  process_create_associated_token_account.rs  program_test.rs  recover_nested.rs  spl_token_create.rs
associated-token-account/program/src/: error.rs  instruction.rs  lib.rs  processor.rs
associated-token-account/program/src/tools/: account.rs
binary-option/program/: Cargo.toml  program_id.md
binary-option/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  spl_utils.rs  state.rs  system_utils.rs  validation_utils.rs
binary-oracle-pair/program/: Cargo.toml
binary-oracle-pair/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
binary-oracle-pair/program/tests/: tests.rs
feature-gate/program/: Cargo.toml
feature-gate/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
feature-gate/program/tests/: functional.rs
feature-proposal/cli/: Cargo.toml
feature-proposal/cli/src/: main.rs
feature-proposal/program/: Cargo.toml  program-id.md  run-tests.sh
feature-proposal/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
feature-proposal/program/tests/: functional.rs
governance/addin-api/: Cargo.toml
governance/addin-api/src/: max_voter_weight.rs  voter_weight.rs
governance/test-sdk/: Cargo.toml
governance/test-sdk/src/: addins.rs  cookies.rs  lib.rs  tools.rs
governance/tools/: Cargo.toml
governance/tools/src/: account.rs  error.rs
instruction-padding/program/: Cargo.toml  README.md
instruction-padding/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
instruction-padding/program/tests/: noop.rs  system.rs
libraries/concurrent-merkle-tree/: Cargo.toml
libraries/concurrent-merkle-tree/src/: concurrent_merkle_tree.rs  hash.rs  lib.rs  log.rs  node.rs
libraries/concurrent-merkle-tree/tests/: tests.rs
libraries/discriminator/: Cargo.toml
libraries/discriminator/derive/: Cargo.toml
libraries/discriminator/derive/src/: lib.rs
libraries/discriminator/src/: discriminator.rs  lib.rs
libraries/discriminator/syn/: Cargo.toml
libraries/discriminator/syn/src/: lib.rs
libraries/math/: Cargo.toml  README.md
libraries/math/src/: error.rs  instruction.rs  lib.rs  processor.rs
libraries/math/tests/: instruction_count.rs
libraries/merkle-tree-reference/: Cargo.toml
libraries/merkle-tree-reference/src/: lib.rs
libraries/pod/: Cargo.toml
libraries/pod/src/: bytemuck.rs  error.rs  lib.rs  optional_keys.rs  slice.rs
libraries/program-error/: Cargo.toml  README.md
libraries/program-error/derive/: Cargo.toml
libraries/program-error/derive/src/: lib.rs  macro_impl.rs  (+1 more)
libraries/program-error/src/: lib.rs
libraries/program-error/tests/: bench.rs  mod.rs  spl.rs
libraries/tlv-account-resolution/: Cargo.toml  README.md
libraries/tlv-account-resolution/src/: account.rs  lib.rs  pubkey_data.rs  seeds.rs  state.rs
libraries/type-length-value/: Cargo.toml  README.md
libraries/type-length-value-derive-test/: Cargo.toml
libraries/type-length-value-derive-test/src/: lib.rs
libraries/type-length-value/derive/: Cargo.toml
libraries/type-length-value/js/: README.md  package.json
libraries/type-length-value/src/: length.rs  lib.rs  state.rs  variable_len_pack.rs
managed-token/program/: Cargo.toml
managed-token/program/src/: accounts.rs  instruction.rs  lib.rs  token.rs
managed-token/program/tests/: test.rs
memo/program/: Cargo.toml  program-id.md
memo/program/src/: lib.rs  processor.rs
memo/program/tests/: functional.rs
name-service/program/: Cargo.toml  program-id.md
name-service/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
name-service/program/tests/: functional.rs
record/program/: Cargo.toml  README.md  program-id.md
record/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
record/program/tests/: functional.rs
shared-memory/program/: Cargo.toml  program-id.md
shared-memory/program/src/: lib.rs
shared-memory/program/tests/: shared-memory.rs
single-pool/cli/: Cargo.toml
single-pool/cli/src/: cli.rs  config.rs  main.rs  output.rs  quarantine.rs
single-pool/cli/tests/: test.rs
single-pool/program/: Cargo.toml  program-id.md
single-pool/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
single-pool/program/tests/: accounts.rs  create_pool_token_metadata.rs  deposit.rs  initialize.rs  reactivate.rs  update_pool_token_metadata.rs  withdraw.rs
stake-pool/cli/: Cargo.toml  README.md
stake-pool/cli/scripts/: add-validators.sh  deposit.sh  rebalance.sh  setup-stake-pool.sh  setup-test-validator.sh  withdraw.sh
stake-pool/cli/src/: client.rs  main.rs  output.rs
stake-pool/program/: Cargo.toml  program-id.md
stake-pool/program/src/: big_vec.rs  entrypoint.rs  error.rs  inline_mpl_token_metadata.rs  instruction.rs  lib.rs  processor.rs  state.rs
stake-pool/program/tests/: create_pool_token_metadata.rs  decrease.rs  deposit.rs  deposit_authority.rs  deposit_edge_cases.rs  deposit_mln.rs  deposit_sol.rs  force_destake.rs  huge_pool.rs  increase.rs  initialize.rs  redelegate.rs  set_deposit_fee.rs  set_epoch_fee.rs  set_funding_authority.rs  set_manager.rs  set_preferred.rs  set_referral_fee.rs  set_staker.rs  set_withdrawal_fee.rs  update_pool_token_metadata.rs  update_stake_pool_balance.rs  update_validator_list_balance.rs  update_validator_list_balance_hijack.rs  vsa_add.rs  vsa_remove.rs  withdraw.rs  withdraw_edge_cases.rs  withdraw_mln.rs  withdraw_with_fee.rs
stateless-asks/program/: Cargo.toml
stateless-asks/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  validation_utils.rs
(+753 files in other folders)
