[package]
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
description = "SOLARTI Associated Token Account Program Tests"
edition = "2021"
license = "Apache-2.0"
name = "solarti-associated-token-account-test"
repository = "https://github.com/miraland-labs/solarti-program-library"
version = "0.0.3"

[features]
test-sbf = []

[dev-dependencies]
miraland-program = "1.14.18"
miraland-program-test = "1.14.18"
miraland-sdk = "1.14.18"
solarti-associated-token-account = { version = "2", path = "../program", features = ["no-entrypoint"] }
solarti-token = { version = "4.0", path = "../../token/program", features = ["no-entrypoint"] }
solarti-token-2022 = { version = "0.9", path = "../../token/program-2022", features = ["no-entrypoint"] }
