[package]
name = "solarti-associated-token-account"
version = "1.1.7"
description = "Solarti Program Library Associated Token Account"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
assert_matches = "1.5.0"
borsh = "0.10.3"
num-derive = "0.3"
num-traits = "0.2"
miraland-program = "=1.14.18"
solarti-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
solarti-token-2022 = { version = "0.6", path = "../../token/program-2022", features = ["no-entrypoint"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_associated_token_account"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
