[package]
name = "solarti-associated-token-account"
version = "2.2.0"
description = "Solarti Program Library Associated Token Account"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
assert_matches = "1.5.0"
borsh = "1.5.1"
num-derive = "0.4"
num-traits = "0.2"
miraland-program = ">1.19.0"
solarti-token = { version = "4.2.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
solarti-token-2022 = { version = "1.1.0", path = "../../token/program-2022", features = [
  "no-entrypoint",
] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_associated_token_account"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
