[package]
name = "solarti-binary-option"
version = "0.1.1"
edition = "2021"
license = "WTFPL"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
miraland-program = "=1.14.17"
thiserror = "1.0"
solarti-token = {version = "3.1", path = "../../token/program", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.10.3"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_binary_option"
