[package]
name = "solarti-binary-option"
version = "0.1.2"
edition = "2021"
license = "WTFPL"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
miraland-program = "1.14.18"
thiserror = "1.0"
solarti-token = {version = "4.0", path = "../../token/program", features = ["no-entrypoint"]}
arrayref = "0.3.7"
borsh = "1.3.1"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_binary_option"
