[package]
name = "solarti-binary-oracle-pair"
version = "0.1.1"
description = "Solarti Program Library Binary Oracle Pair"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
miraland-program = "=1.14.17"
solarti-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.9"
borsh = "0.10.3"

[dev-dependencies]
miraland-program-test = "=1.14.17"
miraland-sdk = "=1.14.17"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_binary_oracle_pair"
