[package]
name = "solarti-binary-oracle-pair"
version = "0.1.2"
description = "Solarti Program Library Binary Oracle Pair"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
miraland-program = ">=1.18.5, <1.19.0"
solarti-token = { version = "4.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
thiserror = "1.0"
uint = "0.9"
borsh = "1.3.0"

[dev-dependencies]
miraland-program-test = ">=1.18.5, <1.19.0"
miraland-sdk = ">=1.18.5, <1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_binary_oracle_pair"
