[package]
name = "solarti-feature-gate"
version = "0.1.0"
description = "Solarti Program Library Feature Gate Program"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
num_enum = "0.7.1"
miraland-program = "1.14.18"
solarti-program-error = { version = "0.3.0", path = "../../libraries/program-error" }

[dev-dependencies]
miraland-program-test = "1.14.18"
miraland-sdk = "1.14.18"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_feature_gate"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
