[package]
name = "solarti-feature-proposal-cli"
version = "1.2.1"
description = "SOLARTI Feature Proposal Command-line Utility"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
clap = "2.33.3"
miraland-clap-utils = "=1.14.17-rc5"
miraland-cli-config = "=1.14.17-rc5"
miraland-client = "=1.14.17-rc5"
miraland-logger = "=1.14.17-rc5"
miraland-sdk = "=1.14.17-rc5"
solarti-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "solarti-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
