[package]
name = "solarti-feature-proposal"
version = "1.0.1"
description = "Solarti Program Library Feature Proposal Program"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "0.9"
miraland-program = "=1.14.17-rc4"
solarti-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
miraland-program-test = "=1.14.17-rc4"
miraland-sdk = "=1.14.17-rc4"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_feature_proposal"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
