[package]
name = "solarti-feature-proposal"
version = "1.0.5"
description = "Solarti Program Library Feature Proposal Program"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.3.0"
miraland-program = ">1.19.0"
solarti-token = { version = "4.2.0", path = "../../token/program", features = [
  "no-entrypoint",
] }

[dev-dependencies]
miraland-program-test = ">1.19.0"
miraland-sdk = ">1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_feature_proposal"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
