[package]
name = "solarti-governance-addin-api"
version = "0.1.3"
description = "Solarti Program Library Governance Addin Api"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = "0.9.1"
solarti-governance-tools= { version = "0.1", path ="../tools"}
miraland-program = "=1.14.17-rc4"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_governance_addin_api"