[package]
name = "solarti-governance-addin-api"
version = "0.1.4"
description = "Solarti Program Library Governance Addin Api"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = "1.2.0"
solarti-governance-tools= { version = "0.1.4", path ="../tools"}
miraland-program = "1.14.18"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_governance_addin_api"