[package]
name = "solarti-governance-tools"
version = "0.1.3"
description = "Solarti Program Library Governance Tools"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.127"
serde_derive = "1.0.103"
miraland-program = "=1.14.17-rc5"
solarti-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_governance_tools"
