[package]
name = "solarti-instruction-padding"
version = "0.1.7"
description = "Solarti Program Library Instruction Padding Program"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
homepage = "https://miraland.top/"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
num_enum = "0.7.1"
miraland-program = ">=1.18.5, <1.19.0"

[dev-dependencies]
miraland-program-test = ">=1.18.5, <1.19.0"
miraland-sdk = ">=1.18.5, <1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_instruction_padding"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
