[package]
name = "solarti-instruction-padding"
version = "0.1.9"
description = "Solarti Program Library Instruction Padding Program"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
homepage = "https://miraland.io/"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
num_enum = "0.7.2"
miraland-program = ">1.19.0"

[dev-dependencies]
miraland-program-test = ">1.19.0"
miraland-sdk = ">1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_instruction_padding"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
