[package]
name = "solarti-concurrent-merkle-tree"
version = "0.1.6"
description = "Solarti Program Library Concurrent Merkle Tree"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
log = []
mln-log = [ "log" ]

[dependencies]
miraland-program = "1.18.2"
bytemuck = "1.15.0"
thiserror = "1.0.30"

[dev-dependencies]
rand_distr = "0.4.3"
rand = "0.7"
solarti-merkle-tree-reference = { version = "0.1", path = "../merkle-tree-reference" }
tokio = { version = "1.12", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_concurrent_merkle_tree"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
