[package]
name = "solarti-concurrent-merkle-tree"
version = "0.2.0"
description = "Solarti Program Library Concurrent Merkle Tree"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
log = []
mln-log = ["log"]

[dependencies]
miraland-program = ">1.19.0"
bytemuck = "1.19.0"
thiserror = "1.0.61"

[dev-dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
solarti-merkle-tree-reference = { version = "0.2", path = "../merkle-tree-reference" }
tokio = { version = "1.38", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_concurrent_merkle_tree"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
