[package]
name = "solarti-discriminator"
version = "0.1.4"
description = "Solarti Program Library 8-Byte Discriminator Management"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { version = "0.10.3", optional = true }
bytemuck = { version = "1.14.0", features = ["derive"] }
miraland-program = "1.14.18"
solarti-discriminator-derive = { version = "0.1.0", path = "./derive" }

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_discriminator"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
