[package]
name = "solarti-math"
version = "0.2.1"
description = "Solarti Program Library Math"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.3.0"
num-derive = "0.4"
num-traits = "0.2"
miraland-program = ">=1.18.5, <1.19.0"
thiserror = "1.0"
uint = "0.9"

[dev-dependencies]
proptest = "1.4.0"
miraland-program-test = ">=1.18.5, <1.19.0"
miraland-sdk = ">=1.18.5, <1.19.0"
libm = "0.2.8"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_math"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
