[package]
name = "solarti-merkle-tree-reference"
version = "0.1.3"
description = "Reference implementation of a merkle tree"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
miraland-program = "1.14.18"
thiserror = "1.0.55"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_merkle_tree_reference"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
