[package]
name = "solarti-merkle-tree-reference"
version = "0.2.0"
description = "Reference implementation of a merkle tree"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
miraland-program = ">1.19.0"
thiserror = "1.0.61"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_merkle_tree_reference"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
