[package]
name = "solarti-pod"
version = "0.1.4"
description = "Solarti Program Library Plain Old Data (Pod)"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
serde-traits = ["dep:serde", "dep:base64"]
borsh = ["dep:borsh"]

[dependencies]
base64 = { version = "0.21.5", optional = true }
borsh = { version = "1.3.0", optional = true }
bytemuck = { version = "1.14.2" }
serde = { version = "1.0.192", optional = true }
miraland-program = "1.18.2"
miraland-zk-token-sdk = "1.18.2"
solarti-program-error = { version = "0.3", path = "../program-error" }

[dev-dependencies]
serde_json = "1.0.108"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_pod"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
