[package]
name = "solarti-pod"
version = "0.1.10"
description = "Solarti Program Library Plain Old Data (Pod)"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
serde-traits = ["dep:serde", "dep:base64"]
borsh = ["dep:borsh"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
borsh = { version = "1.5.1", optional = true }
bytemuck = "1.19.0"
serde = { version = "1.0.203", optional = true }
miraland-program = ">1.19.0"
miraland-zk-token-sdk = ">1.19.0"
solarti-program-error = { version = "0.3.11", path = "../program-error" }

[dev-dependencies]
serde_json = "1.0.117"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_pod"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
