[package]
name = "solarti-program-error"
version = "0.3.7"
description = "Library for Solarti Program error attributes and derive macro for creating them"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
miraland-program = ">=1.18.2, <1.19.0"
solarti-program-error-derive = { version = "0.3.7", path = "./derive" }
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4"
serial_test = "3.0"
miraland-sdk = ">=1.18.2, <1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_program_error"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
