[package]
name = "solarti-tlv-account-resolution"
version = "0.5.0"
description = "Solarti Program Library TLV Account Resolution Interface"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
miraland-program = "1.18.2"
solarti-discriminator = { version = "0.1.5", path = "../discriminator" }
solarti-program-error = { version = "0.3.5", path = "../program-error" }
solarti-type-length-value = { version = "0.3.4", path = "../type-length-value" }
solarti-pod = { version = "0.1.4", path = "../pod" }

[dev-dependencies]
futures = "0.3.30"
futures-util = "0.3"
miraland-client = "1.18.2"
miraland-program-test = "1.18.2"
miraland-sdk = "1.18.2"
solarti-discriminator = { version = "0.1.5", path = "../discriminator" }

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_tlv_account_resolution"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
