[package]
name = "solarti-tlv-account-resolution"
version = "0.5.5"
description = "Solarti Program Library TLV Account Resolution Interface"
authors = [
  "Miraland Crafters <crafters@miraland.io>",
  "Miraland Labs Maintainers <maintainers@miralandlabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
serde-traits = ["dep:serde"]
test-sbf = []

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
serde = { version = "1.0.203", optional = true }
miraland-program = ">1.19.0"
solarti-discriminator = { version = "0.1.10", path = "../discriminator" }
solarti-program-error = { version = "0.3.11", path = "../program-error" }
solarti-type-length-value = { version = "0.3.9", path = "../type-length-value" }
solarti-pod = { version = "0.1.10", path = "../pod" }

[dev-dependencies]
futures = "0.3.30"
futures-util = "0.3"
miraland-client = ">1.19.0"
miraland-program-test = ">1.19.0"
miraland-sdk = ">1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_tlv_account_resolution"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
