[package]
name = "solarti-type-length-value-derive-test"
version = "0.1.0"
description = "Testing Derive Macro Library for Solarti Type Length Value traits"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[dev-dependencies]
borsh = "0.10.3"
miraland-program = ">=1.18.2, <1.19.0"
solarti-discriminator = { version = "0.1", path = "../discriminator" }
solarti-type-length-value = { version = "0.3", path = "../type-length-value", features = [
  "derive",
] }

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_type_length_value_derive_test"
