[package]
name = "solarti-type-length-value"
version = "0.3.5"
description = "Solarti Program Library Type-Length-Value Management"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"
exclude = ["js/**"]

[features]
derive = ["dep:solarti-type-length-value-derive"]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
miraland-program = ">=1.18.2, <1.19.0"
solarti-discriminator = { version = "0.1", path = "../discriminator" }
solarti-program-error = { version = "0.3", path = "../program-error" }
solarti-type-length-value-derive = { version = "0.3.4", path = "./derive", optional = true }
solarti-pod = { version = "0.1.4", path = "../pod" }

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_type_length_value"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
