[package]
name = "solarti-managed-token"
version = "0.1.2"
description = "Solarti Program Library Token Swap"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_managed_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
borsh = "0.10.3"
shank = "^0.2.1"
miraland-program = "1.14.18"
solarti-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = ["no-entrypoint"] }
solarti-token = { version = "4.0", path = "../../token/program", features = ["no-entrypoint"] }
thiserror = "^1.0.50"

[dev-dependencies]
miraland-program-test = "1.18.2"
miraland-sdk = "1.14.18"
