[package]
name = "solarti-memo"
version = "3.0.6"
description = "Solarti Program Library Memo"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
miraland-program = "=1.14.18"

[dev-dependencies]
miraland-program-test = "=1.14.18"
miraland-sdk = "=1.14.18"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_memo"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
