[package]
name = "solarti-memo"
version = "4.0.2"
description = "Solarti Program Library Memo"
authors = [
  "Miraland Crafters <crafters@miraland.top>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>",
]
repository = "https://github.com/miraland-labs/solarti-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
miraland-program = ">=1.18.2, <1.19.0"

[dev-dependencies]
miraland-program-test = ">=1.18.2, <1.19.0"
miraland-sdk = ">=1.18.2, <1.19.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_memo"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
